# maestro-cli

./: .codacy.yml  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  demo-audit.tape  demo-tui.tape  demo.tape  pyproject.toml  sonar-project.properties
.claude/: settings.json
.claude/agents/: architect.md  cli-engineer.md  code-reviewer.md  cost-optimizer.md  dynamic-planner.md  plan-author.md  python-developer.md  qa-engineer.md  quality-gatekeeper.md  security-engineer.md  tui-engineer.md
.claude/rules/: agent-routing.md  code-style.md  error-handling.md  testing.md  type-safety.md  yaml-schema.md
.claude/skills/add-engine/: SKILL.md
.claude/skills/add-plan-field/: SKILL.md
.claude/skills/create-dynamic-plan/: SKILL.md
.claude/skills/create-plan/: SKILL.md
.claude/skills/debug-run/: SKILL.md
.claude/skills/write-tests/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  requirements-ci.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  gif.yml  publish.yml  real-engine.yml  sonarcloud.yml
docs/: AGENT_OPS.md  CLI_REFERENCE.md  CONTRIBUTING.md  COVERAGE_PLATFORMS.md  FEATURE-READINESS.md  MIGRATING_TO_V1.md  MODELS.md  PITFALLS.md  PLAN_GUIDE.md  PLAYBOOK.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_BASELINE.md  TESTED_GUARANTEES.md  V1_API_FREEZE.md  VERSIONING.md
docs/assets/: demo-audit.tape  demo-tui.tape  demo.tape
examples/: README.md  advanced-features.yaml  context-mode-demo.yaml  context-passing.yaml  custom-workflow-library.yaml  demo_plan.yaml  dynamic-group-demo.yaml  library-brief.yaml  pitfall-audit.yaml  risky_plan.yaml  scaffold-brief.yaml  tui_demo.yaml  windows-bash.yaml
examples/audit-packs/: security-baseline-demo.yaml  security-baseline.yaml
examples/ci/: github-actions.yml  github_actions_maestro.yml  gitlab_ci.yml
mutations/: cosmic-ray-loader.toml  cosmic-ray-routing.toml
programs/: mutation-loader.md  mutation-routing.md
scripts/: doc_lint.py  list_survivors.py  list_survivors_loader.py  mutation_score.py  run_mutation_loader.py  run_mutation_routing.py  seed_knowledge.py
src/maestro_cli/: __init__.py  ag_ui.py  audit.py  benchmark.py  blame.py  budget.py  cache.py  chat.py  ci.py  ci_agent.py  ci_github_actions.py  ci_gitlab_ci.py  cleanup.py  cli.py  codebase_graph.py  codebase_map.py  contracts.py  cost_backfill.py  council.py  diff.py  doctor.py  dynamic.py  errors.py  estimate.py  eval.py  eventsource.py  explain.py  fts.py  hardware.py  knowledge.py  knowledge_graph.py  live.py  loader.py  mcp_server.py  mcts.py  memory.py  models.py  multi.py  otel.py  plugins.py  (+19 more)
src/maestro_cli/tui/: __init__.py  app.py  app.tcss  widgets.py
src/maestro_cli/web/: app.py  routes_agui.py  routes_api.py  routes_sse.py  state.py
src/maestro_cli/web/static/: app.js  charts.js  dashboard.js  index.html  log-viewer.js  logs.html  new-run.html  new-run.js  run-detail.js  run.html  style.css
tests/: conftest.py  test_advanced_judge.py  test_ag_ui.py  test_allowed_tools.py  test_anchor_support.py  test_approval.py  test_audit.py  test_audit_cov.py  test_benchmark.py  test_benchmark_cov.py  test_blame.py  test_budget.py  test_cache.py  test_cache_cov.py  test_callback_multi.py  test_cfi.py  test_chat.py  test_chat_cov.py  test_checkpoint.py  test_ci.py  test_ci_agent_cov.py  test_ci_github_actions.py  test_ci_gitlab_ci.py  test_cleanup.py  test_cli.py  test_cli_cov.py  test_codebase_graph.py  test_codebase_graph_cov.py  test_codebase_map.py  test_compact.py  test_context_budget.py  test_context_mode.py  test_context_model.py  test_contracts.py  test_copilot_engine.py  test_cost_backfill.py  test_cost_tracking.py  test_council.py  test_coverage_2_5_3.py  test_diff.py  (+155 more)
tests/fixtures/plans/: all_engines.yaml  approval_and_worktree.yaml  deps_and_context.yaml  judge_and_quality.yaml  matrix_expansion.yaml  policies.yaml  resilience.yaml  secrets_and_cfi.yaml  simple_command.yaml  watch_block.yaml
